--- a/model-accessibilité/index.html
+++ b/model-accessibilité/index.html
@@ -25,6 +25,6 @@
 	<h1>page de référence pour l'accessibilité</h1>
 	<main>
 		<a href='page-navclav.html'>navigation via le clavier</a>
-		<a href='page-general.html'>généralités</a>
+		<a href='page-css.html'>bases du css</a>
 	</main>
 </body></html>
