--- a/conges.html
+++ b/conges.html
@@ -55,6 +55,20 @@
 	<p id='nb-rtt'>il me reste $ RTT</p>
 </body>
 <script type='text/javascript'>
+const text = 'tra-la-li';
+
+String.prototype.get = function(){
+	return function (x){
+		console.log (x);
+		console.log (y);
+		return 25;
+	}
+}
+console.log (text.substring (2,8));
+console.log (text['doudou']);
+
+
+
 	const nbRttPris = 1;
 	const nbCpPris = 21.5;
 	const nbCpTotal = 29;
