--- a/rgaa-test/index.html
+++ b/rgaa-test/index.html
@@ -14,5 +14,6 @@
 	<h1>tester mon extension pour le rgaa</h1>
 	<nav>
 		<a href='image.html'>les images</a>
+		<a href='iframe.html'>les cadres</a>
 	</nav>
 </body></html>
