--- a/bases/base xhtml.xhtml
+++ b/bases/base xhtml.xhtml
@@ -1,9 +1,9 @@
 <?xml version='1.0' encoding='utf-8'?>
-<html xmlns='http://www.w3.org/1999/xhtml' xml:lang='fr'>
+<html xmlns='http://www.w3.org/1999/xhtml' xml:lang='fr' lang='fr'>
 <head>
 	<title></title>
 	<meta name='viewport' content='width=device-width,initial-scale=1'/>
-	<meta charset='utf-8'/>
+	<meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
 	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/structure.css'/>
 	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/perso.css' media='screen'/>
 	<link rel='stylesheet' type='text/css' href='../liseuse.css'/>
