--- a/rgaa-test/index.html
+++ b/rgaa-test/index.html
@@ -15,6 +15,7 @@
 	<nav>
 		<a href='image.html'>les images</a>
 		<a href='iframe.html'>les cadres</a>
+		<a href='langue.html'>les langues</a>
 		<a href='structure.html'>la structure de la page</a>
 	</nav>
 </body></html>
