--- a/rgaa-test/image.html
+++ b/rgaa-test/image.html
@@ -25,6 +25,10 @@
 </style></head><body>
 	<h1>tester les images</h1>
 	<a href='./index.html'>retour à l'index</a>
+	<p>image sans source</p>
+	<img alt='image sans source'>
+	<p>image avec source vide</p>
+	<img alt='image avec source vide' src="">
 	<p>image sans alt</p>
 	<img src='https://lh3.googleusercontent.com/pw/AP1GczOT7pmJXrqv3kGhNKdNz94vGTfNx75GiyNx9ltDhL1Cvu_kcfbzIU_cQFsTDb7h164rRkck5suVWHpALAlI5zuSDuaWEs8hvv-I-mN2V3qAmVwOYytYIG57Vb75Tviv4nVHgej8bhRXVGpw9CCk4AHw=w800-h800-s-no-gm' />
 	<p>image avec alt vide</p>
