--- a/rgaa-test/index.html
+++ b/rgaa-test/index.html
@@ -17,5 +17,6 @@
 		<a href='iframe.html'>les cadres</a>
 		<a href='langue.html'>les langues</a>
 		<a href='structure.html'>la structure de la page</a>
+		<a href='balisage.html'>le balisage</a>
 	</nav>
 </body></html>
