--- a/rgaa-test/balisage.html
+++ b/rgaa-test/balisage.html
@@ -15,4 +15,19 @@
 	<p></p>
 	<div></div>
 	<h2 role='presentation'>titre de présentation</h2>
+	<ul>
+		<li>premier élément de la liste</li>
+		<p>paragraphe dans la liste</p>
+		<li>dernier élément de la liste</li>
+	</ul>
+	<div>
+		<a href='http://deborah-powers.fr'>un lien hors liste</a>
+		<a href='http://deborah-powers.fr'>deux liens hors liste</a>
+		<a href='http://deborah-powers.fr'>trois liens hors liste</a>
+	</div>
+	<ol>
+		<li><a href='http://deborah-powers.fr'>un lien dans une liste</a></li>
+		<li><a href='http://deborah-powers.fr'>deux liens dans une liste</a></li>
+		<li><a href='http://deborah-powers.fr'>trois liens dans une liste</a></li>
+	</ol>
 </body></html>
