--- a/rgaa-test/image.html
+++ b/rgaa-test/image.html
@@ -22,6 +22,11 @@
 		stroke: #342C37;
 	}
 	img, input { width: 100%; }
+	/*
+	img { border: solid 4px deeppink; }
+	img[src] { border-color: blue; }
+	img[src=""] { border-color: red; }
+	*/
 </style></head><body>
 	<h1>tester les images</h1>
 	<a href='./index.html'>retour à l'index</a>
