--- a/rgaa-test/structure.html
+++ b/rgaa-test/structure.html
@@ -17,7 +17,7 @@
 		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 		cillum dolore eu fugiat nulla pariatur. <blink>Excepteur sint occaecat</blink> cupidatat non
 		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-		<p align='center'>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		<p align='right'>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
@@ -35,6 +35,7 @@
 		<li></li>
 		<li>dernier élément de la liste</li>
 	</ul>
+	<ol></ol>
 	</main>
 	<main><p>seconde main</p></main>
 	<main hidden='false'><p>troisième main</p></main>
