--- a/rgaa-test/langue.html
+++ b/rgaa-test/langue.html
@@ -5,6 +5,9 @@
 	<meta charset='utf-8'/>
 	<link rel='stylesheet' type='text/css' href='file:///C:/wamp64/www/site-dp/library-css/structure.css'/>
 	<link rel='stylesheet' type='text/css' href='file:///C:/wamp64/www/site-dp/library-css/perso.css' media='screen'/>
+<style type='text/css'>
+	body { -moz-transform: scale(2); }
+</style>
 </head><body>
 	<a href='./index.html'>retour à l'index</a>
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
