--- a/rgaa-test/index.html
+++ b/rgaa-test/index.html
@@ -12,13 +12,12 @@
 	}
 </style></head><body>
 	<h1>tester mon extension pour le rgaa</h1>
-	<nav>
-		<a href='image.html'>les images</a>
-		<a href='iframe.html'>les cadres</a>
-		<a href='langue.html'>les langues</a>
-		<a href='structure.html'>la structure de la page</a>
-		<a href='balisage.html'>le balisage</a>
-	</nav>
+	<a href='image.html'>les images</a>
+	<a href='iframe.html'>les cadres</a>
+	<a href='langue.html'>les langues</a>
+	<a href='structure.html'>la structure de la page</a>
+	<a href='balisage.html'>le balisage</a>
+	<a href='cache.html'>le contenu caché</a>
 </body>
 <script type="text/javascript">
 /*
