--- a/rgaa-test/formulaire.html
+++ b/rgaa-test/formulaire.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html lang='fr-FR'><head>
-	<title>langue | rgaa test</title>
+	<title>formulaire | rgaa test</title>
 	<base target='_self'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'/>
 	<meta charset='utf-8'/>
