--- a/rgaa-test/balisage.html
+++ b/rgaa-test/balisage.html
@@ -5,7 +5,7 @@
 	<meta charset='utf-8'/>
 	<link rel='stylesheet' type='text/css' href='file:///C:/wamp64/www/site-dp/library-css/structure.css'/>
 	<link rel='stylesheet' type='text/css' href='file:///C:/wamp64/www/site-dp/library-css/perso.css' media='screen'/>
-</head><body>
+<style type='text/css'></style></head><body>
 	<h1>tester le balisage</h1>
 	<a href='./index.html'>retour à l'index</a>
 	<h2>les balises pleines</h2>
@@ -15,17 +15,17 @@
 	<p></p>
 	<div></div>
 	<h2 role='presentation'>titre de présentation</h2>
-	<ul>
+	<ul title='premier exemple de liste en erreur'>
 		<li>premier élément de la liste</li>
 		<p>paragraphe dans la liste</p>
 		<li>dernier élément de la liste</li>
 	</ul>
-	<div>
+	<div title="liste de liens en-dehord d'une liste">
 		<a href='http://deborah-powers.fr'>un lien hors liste</a>
 		<a href='http://deborah-powers.fr'>deux liens hors liste</a>
 		<a href='http://deborah-powers.fr'>trois liens hors liste</a>
 	</div>
-	<ol>
+	<ol title='second exemple de liste en erreur'>
 		<li><a href='http://deborah-powers.fr'>un lien dans une liste</a></li>
 		<li><a href='http://deborah-powers.fr'>deux liens dans une liste</a></li>
 		<li><a href='http://deborah-powers.fr'>trois liens dans une liste</a></li>
