--- a/rgaa-test/index.html
+++ b/rgaa-test/index.html
@@ -17,7 +17,7 @@
 	<a href='langue.html'>les langues</a>
 	<a href='structure.html'>la structure de la page</a>
 	<a href='balisage.html'>le balisage</a>
-	<a href='cache.html'>le contenu caché</a>
+	<a href='hidden.html'>le contenu caché</a>
 </body>
 <script type="text/javascript">
 /*
