--- a/rgaa-test/tableau.html
+++ b/rgaa-test/tableau.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html><html lang='fr-FR'><head>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
+   "http://www.w3.org/TR/html4/strict.dtd">
+<html lang='fr-FR'><head>
 	<title>tableau | rgaa test</title>
 	<base target='_self'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'/>
@@ -8,23 +10,12 @@
 <style type='text/css'>
 	table, tr { width: 100%; }
 	table { margin: 1em 0; }
-table { border: solid 4px deeppink; }
-table[role='presentation'], table[role='none'] { border-color: green; }
-table[role='presentation'] thead, table[role='none'] thead, table[role='presentation'] tfoot, table[role='none'] tfoot,
-table[role='presentation'] colgroup, table[role='none'] colgroup,
-table[role='presentation'] caption, table[role='none'] caption, table[role='presentation'] th, table[role='none'] th
-	{ border: solid 4px orangered; }
-table[role='presentation'] td[scope], table[role='none'] td[scope], table[role='presentation'] th[span], table[role='none'] th[span], table[role='presentation'] th[axis], table[role='none'] th[axis]
-	{ border: dotted 4px deeppink; }
-table[role='presentation'] th[scope], table[role='none'] th[scope], table[role='presentation'] td[span], table[role='none'] td[span], table[role='presentation'] td[axis], table[role='none'] td[axis]
-	{ border-style: dotted; }
-[role='rowheader'], [role='columnheader'] {}
 </style>
 </head><body>
 	<h1>les tableaux</h1>
 	<a href='./index.html'>retour à l'index</a>
 	<h2>tableaux de présentation</h2>
-	<table role='presentation'>
+	<table role='presentation' rale>
 		<tr><td>aa</td><td>ab</td><td>ac</td></tr>
 		<tr><td>ba</td><td>bb</td><td>bc</td></tr>
 	</table>
@@ -34,8 +25,50 @@ table[role='presentation'] th[scope], table[role='none'] th[scope], table[role='
 		<tr><td>ba</td><td>bb</td><td>bc</td></tr>
 		<tr><td>ca</td><td>cb</td><td>cc</td></tr>
 	</table>
-	<table>
-		<tr><td>aa</td><td>ab</td><td>ac</td></tr>
-		<tr><td>ba</td><td>bb</td><td>bc</td></tr>
+	<table role='presentation'>
+		<tr><th>aa</th><th>ab</th><th>ac</th></tr>
+		<tr><td colspan='2'>ba</td><td>bc</td></tr>
+		<tr><td>ca</td><td>cb</td><td>cc</td></tr>
 	</table>
-</body></html>
+	<h2>tableaux de données</h2>
+	<table>
+		<caption>tître du tableau</caption>
+		<tr><th>aa</th><th>ab</th><th>ac</th></tr>
+		<tr><td>ba</td><td>bb</td><td>bc</td></tr>
+		<tr><td>ca</td><td>cb</td><td>cc</td></tr>
+	</table>
+	<table title='tître du tableau'>
+		<tr><th>aa</th><th>ab</th><th>ac</th></tr>
+		<tr><td>ba</td><td>bb</td><td>bc</td></tr>
+		<tr><td>ca</td><td>cb</td><td>cc</td></tr>
+	</table>
+	<table aria-label='tître du tableau'>
+		<tr><th>aa</th><th>ab</th><th>ac</th></tr>
+		<tr><td>ba</td><td>bb</td><td>bc</td></tr>
+		<tr><td>ca</td><td>cb</td><td>cc</td></tr>
+	</table>
+	<table aria-labelledby='tabla-bel'>
+		<tr><th>aa</th><th>ab</th><th>ac</th></tr>
+		<tr><td>ba</td><td>bb</td><td>bc</td></tr>
+		<tr><td>ca</td><td>cb</td><td>cc</td></tr>
+	</table>
+	<p id='tabla-bel'>tître connecté via aria-labelledby</p>
+	<p>un tableau sans tître</p>
+	<table>
+		<tr><th>aa</th><th>ab</th><th>ac</th></tr>
+		<tr><td>ba</td><td>bb</td><td>bc</td></tr>
+		<tr><td>ca</td><td>cb</td><td>cc</td></tr>
+	</table>
+	<table>
+		<caption>tableau à deux entrée mal annoté</caption>
+		<tr><th>aa</th><th>ab</th><th>ac</th><th>ad</th></tr>
+		<tr><th>ba</th><td>bb</td><td>bc</td><td>bd</td></tr>
+		<tr><th>ca</th><td>cb</td><td>cc</td><td>cd</td></tr>
+	</table>
+	<table>
+		<caption>tableau à deux entrée</caption>
+		<tr><th scope='row'>aa</th><th scope='col'>ab</th><th scope='col'>ac</th><th scope='col'>ad</th></tr>
+		<tr><th scope='row'>ba</th><td>bb</td><td>bc</td><td>bd</td></tr>
+		<tr><th scope='row'>ca</th><td>cb</td><td>cc</td><td>cd</td></tr>
+	</table>
+<script type='text/javascript'></script></body></html>
