--- a/rgaa-test/index.html
+++ b/rgaa-test/index.html
@@ -15,6 +15,8 @@
 	<a href='image.html'>les images</a>
 	<a href='iframe.html'>les cadres</a>
 	<a href='langue.html'>les langues</a>
+	<a href='titre.html'>les tîtres</a>
+	<a href='liste.html'>les listes</a>
 	<a href='structure.html'>la structure de la page</a>
 	<a href='balisage.html'>le balisage</a>
 	<a href='tableau.html'>les tableaux</a>
