--- a/rgaa-test/index.html
+++ b/rgaa-test/index.html
@@ -22,6 +22,7 @@
 	<a href='tableau.html'>les tableaux</a>
 	<a href='tabulation.html'>la tabulation</a>
 	<a href='hidden.html'>le contenu caché</a>
+	<a href='multimedia.html'>le contenu multi-média</a>
 </body>
 <script type="text/javascript">
 /*
