--- a/rgaa-test/multimedia.html
+++ b/rgaa-test/multimedia.html
@@ -14,7 +14,13 @@
 	<a href='./index.html'>retour à l'index</a>
 	<video controls>
 		<source src='multimedia-video.mp4' type='video/mp4' />
-		<track kind='captions' label='Français' src='multimedia-stitre.srt' />
+		<!-- track kind='captions' label='français' src='multimedia-stitre.srt' /-->
 	</video>
-	<a href='https://stackoverflow.com/questions/72811082/security-error-loading-subtitles-on-html-video'>le problème</a>
+	<a href='https://stackoverflow.com/questions/72811082/security-error-loading-subtitles-on-html-video'>le problème avec les fichiers</a>
+<script type='text/javascript'>
+	const myVideo = document.getElementsByTagName ('video')[0];
+	const myTrack = myVideo.addTextTrack ('captions', 'français', 'fr');
+	myTrack.addCue (new VTTCue (1, 3, 'Bonjour Magritte'));
+	myTrack.addCue (new VTTCue (4, 6, 'As-tu soif ?'));
+</script>
 </body></html>
