--- a/rgaa-test/index.html
+++ b/rgaa-test/index.html
@@ -23,6 +23,7 @@
 	<a href='tabulation.html'>la tabulation</a>
 	<a href='hidden.html'>le contenu caché</a>
 	<a href='multimedia.html'>le contenu multi-média</a>
+	<a href='download.html'>les téléchargements</a>
 </body>
 <script type="text/javascript">
 /*
