--- a/piece.html
+++ b/piece.html
@@ -26,7 +26,7 @@
 		background-color: lightgreen;
 	}
 </style></head><body>
-<piece class='frec'>
+<piece>
 	<div class='fond'>fond</div>
 	<div class='sol'>sol</div>
 	<div class='toit'>toit</div>
@@ -34,7 +34,7 @@
 	<div class='murd'>droit</div>
 	<div id='dodo'>ok</div>
 </piece>
-<piece>
+<piece class='fmed'>
 	<div class='fond'>fond</div>
 	<div class='sol'>sol</div>
 	<div class='toit'>toit</div>
