--- a/rgaa-test/index.html
+++ b/rgaa-test/index.html
@@ -20,6 +20,7 @@
 	<a href='structure.html'>la structure de la page</a>
 	<a href='balisage.html'>le balisage</a>
 	<a href='tableau.html'>les tableaux</a>
+	<a href='flash.html'>le clignotement</a>
 	<a href='tabulation.html'>la tabulation</a>
 	<a href='hidden.html'>le contenu caché</a>
 	<a href='multimedia.html'>le contenu multi-média</a>
