--- a/rgaa-test/download.html
+++ b/rgaa-test/download.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head>
-	<title>images | rgaa test</title>
+	<title>téléchargement | rgaa test</title>
 	<base target='_blank'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'/>
 	<meta charset='utf-8'/>
@@ -9,10 +9,17 @@
 	a { display: block; }
 </style></head><body>
 	<h1>tester les téléchargements</h1>
+	<a href='./index.html'>retour à l'index</a>
 	<a href='http://deborah-powers.fr'>lien simple</a>
 	<a href='http://deborah-powers.fr/data/CV%20developpeur%20deborah%20powers.pdf' download>lien de téléchargement anoté</a>
 	<a href='http://deborah-powers.fr/data/CV%20developpeur%20deborah%20powers.pdf'>lien de téléchargement</a>
 	<button onclick='downloadCV()'>bouton de téléchargement</button>
+	<button onclick='downloadCV()'>bouton sans mot-clef</button>
+	<form method='get' onsubmit='return false'>
+		<input type='submit' onclick='downloadCV()' value='téléchargez mon cv via un bouton submit'/>
+		<input type='button' onclick='downloadCV()' value='téléchargez mon cv via un bouton input'/>
+		<input type='submit' onclick='downloadCV()' value='input sans mot-clef'/>
+	</form>
 	<script type='text/javascript'>
 		function downloadCV(){
 			window.location.href = 'http://deborah-powers.fr/data/CV%20developpeur%20deborah%20powers.pdf';
