--- a/rgaa-test/download.html
+++ b/rgaa-test/download.html
@@ -8,7 +8,16 @@
 <script type='text/javascript'></script>
 <style type='text/css'>
 	a { display: block; }
-	.rgaa-highlight { background-color: greenyellow; }
+	p#hello {
+		color: ivory;
+		background-color: ivory;
+		text-align: center;
+		height: 4em;
+		width: 50%;
+		margin: auto;
+		padding-top: 1em;
+		font-size: 1.5em;
+	}
 </style></head><body>
 	<h1>tester les téléchargements</h1>
 	<a href='./index.html'>retour à l'index</a>
@@ -17,26 +26,26 @@
 	<a href='http://deborah-powers.fr/data/CV%20developpeur%20deborah%20powers.pdf'>lien de téléchargement</a>
 	<button onclick='downloadCV()'>bouton de téléchargement</button>
 	<button onclick='downloadCV()'>bouton sans mot-clef</button>
-	<button onmousedown='sayHello()'>bouton en mouse down</button>
-	<button onmouseover='sayHello()'>bouton en mouse over</button>
+	<button onmouseup='sayHello()'>bouton en mouse up</button>
 	<form method='get' onsubmit='return false'>
 		<input type='submit' onclick='downloadCV()' value='téléchargez mon cv via un bouton submit'/>
 		<input type='button' onclick='downloadCV()' value='téléchargez mon cv via un bouton input'/>
 		<input type='submit' onclick='downloadCV()' value='input sans mot-clef'/>
-		<input type='submit' onmousedown='sayHello()' value='input en mouse down'/>
-		<input type='submit' onmouseover='sayHello()' value='input en mouse over'/>
+		<input type='submit' onmouseup='sayHello()' value='input en mouse up'/>
 	</form>
 	<p onclick='sayHello()'>paragraphe cliquable</p>
 	<p>paragraphe attaché à un évênement</p>
+	<p id='hello'>hello</p>
 	<script type='text/javascript'>
-
 		function downloadCV(){
 			window.location.href = 'http://deborah-powers.fr/data/CV%20developpeur%20deborah%20powers.pdf';
 		}
-		function sayHello(){ alert ('hello !'); }
+		const hello = document.getElementById ('hello');
+		function sayHello(){
+			hello.style.backgroundColor = 'deeppink';
+			setTimeout (function(){ hello.style.backgroundColor = 'ivory'; }, 2000);
+		}
 		const paragraph = document.getElementsByTagName ('p')[1];
-		paragraph.addEventListener ('dblclick', sayHello);
-		const scripts = document.getElementsByTagName ('script');
-		for (var s=0; s< scripts.length; s++) if (scripts[s].innerText.includes ('.addEventListener')){ console.log (scripts[s].innerText); }
+		paragraph.addEventListener ('click', sayHello);
 	</script>
 </body></html>
