--- a/rgaa-test/index.html
+++ b/rgaa-test/index.html
@@ -13,6 +13,7 @@
 </style></head><body>
 	<h1>tester mon extension pour le rgaa</h1>
 	<a href='image.html'>les images</a>
+	<a href='lien.html'>les liens</a>
 	<a href='iframe.html'>les cadres</a>
 	<a href='langue.html'>les langues</a>
 	<a href='titre.html'>les tîtres</a>
