--- a/rgaa-test/index.html
+++ b/rgaa-test/index.html
@@ -18,6 +18,7 @@
 	<a href='langue.html'>les langues</a>
 	<a href='titre.html'>les tîtres</a>
 	<a href='liste.html'>les listes</a>
+	<a href='navigation.html'>la navigation</a>
 	<a href='structure.html'>la structure de la page</a>
 	<a href='balisage.html'>le balisage</a>
 	<a href='tableau.html'>les tableaux</a>
