--- a/rgaa-test/formulaire.html
+++ b/rgaa-test/formulaire.html
@@ -5,6 +5,7 @@
 	<meta charset='utf-8'/>
 	<link rel='stylesheet' type='text/css' href='file:///C:/wamp64/www/site-dp/library-css/structure.css'/>
 	<link rel='stylesheet' type='text/css' href='file:///C:/wamp64/www/site-dp/library-css/perso.css' media='screen'/>
+	<script type='text/javascript' src='file:///C:/wamp64/www/site-dp/library-js/textFct.js'></script>
 <style type='text/css'>
 	form#hidden-boxes input[type='radio'] { display: none; }
 	form#hidden-boxes label:hover, form#hidden-boxes label:focus { border: solid 2px deeppink; }
@@ -27,7 +28,7 @@
 	<p>exemples de formulaires en js</p>
 <form method='get' onsubmit='return false'>
 	<h3>formulaire js classique</h3>
-	<label for='option-1a'>option a</label><input type='radio' name='option-choix-1' id='option-1a' value='option a' />
+	<label for='option-1a'>option a</label><input type='radio' name='option-choix-1' ib='option-1a' value='option a' />
 	<label for='option-1b'>option b</label><input type='radio' name='option-choix-1' id='option-1b' value='option b' />
 	<input type='submit' value='allez-y' onclick='printChoice("1")'>
 </form>
